oni fixed changes and alignment changes

--- a/src/app/about-device/about-device.page.scss
+++ b/src/app/about-device/about-device.page.scss
@@ -69,7 +69,7 @@
     justify-content: center;
 }
 .company-card{
-    padding: 3px;
+    padding: 5px;
     background: #112E5B;
     border-radius: 13px;
     display: flex;
