--- a/src/app/sign-up/sign-up.page.scss
+++ b/src/app/sign-up/sign-up.page.scss
@@ -182,7 +182,7 @@ hr {
 }
 
 .genderbg {
-    background-color: #f3f4f7;
+    background-color: #f3f4f700;
     border-radius: 20px;
 }
 
